--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
-body
-{
-
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 * {
@@ -26,6 +27,8 @@ a:hover{
 	text-align: center;
   	display: inline-block;
   	padding-left: 20px;
+  	position: absolute;
+  	z-index: 2;
 }
 
 .page-bar-text
@@ -40,7 +43,7 @@ a:hover{
 {
 	background-color: AntiqueWhite;
 	border: none;
-	color: CornflowerBlue;
+	color: SaddleBrown;
 	padding: 13px 15px;
 	text-decoration: none;
 	display: inline-block;
@@ -52,4 +55,77 @@ a:hover{
 {
 	background-color: CornflowerBlue;
  	color: white;
+}
+
+.house-img
+{
+	background-image: url("../img/house2.jpg");
+	height: 90%;
+	width: 100%;
+	position: absolute;
+	z-index: 1;
+	background-position: center;
+  	background-repeat: no-repeat;
+  	background-size: cover;
+  	padding-left: 0px;
+  	filter: blur(8px);
+  	-webkit-filter: blur(8px);
+}
+
+.search-option-menu
+{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: 3;
+	text-align: center;
+	padding-top: 25%;
+	/*border: 3px solid #f1f1f1;*/
+}
+
+.buton-on-option-menu
+{
+  	background-color: SaddleBrown;
+	border: none;
+	font-size: 25px;
+	width: 150px;
+  	height: 50px;
+  	/*padding: 20px;*/
+
+}
+
+.buton-on-option-menu:hover
+{
+	background-color: CornflowerBlue;
+ 	color: white;
+}
+
+.search-option-menu .search-container {
+  	float: center;
+  	position: absolute;
+	z-index: 4;
+}
+
+.search-option-menu input[type=text] {
+  padding: 20px;
+  margin: 5px;
+  font-size: 25px;
+  border: none;
+  width: 600px;
+  text-align: center;
+}
+
+.search-option-menu .search-container button {
+  float: right;
+  padding: 20px 20px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 25px;
+  border: none;
+  cursor: pointer;
+}
+
+.search-option-menu .search-container button:hover {
+  background: #ccc;
 }
