--- a/css/index.css
+++ b/css/index.css
@@ -23,12 +23,32 @@ a:hover{
 {
 	width: 100%;
 	height: 56px;
-	background-color: AntiqueWhite;
+	background-color: RoyalBlue;
 	text-align: center;
-  display: inline-block;
   padding-left: 20px;
   position: absolute;
   z-index: 2;
+  /*animation-name: color-change-RoyalBlue-SteelBlue-to-RoyalBlue;*/
+  /*animation-duration: 2s;*/
+}
+
+/*@keyframes color-change-RoyalBlue-SteelBlue-to-RoyalBlue */
+/*{*/
+  /*from {background-color: RoyalBlue;}*/
+  /*to {background-color: SteelBlue;}*/
+/*}*/
+
+.page-bar-header1
+{
+	position: absolute;
+	z-index: 5;
+	/*border: 3px solid #000000;*/
+	width: 80px;
+	height: 56px;
+	margin-left: 135px;
+	font-size: 50%;
+	font-family: Cursive, Times, serif;
+	color: MediumBlue;
 }
 
 .page-bar-text
@@ -41,9 +61,9 @@ a:hover{
 
 .buton-on-bar
 {
-	background-color: AntiqueWhite;
+	background-color: RoyalBlue;
 	border: none;
-	color: SaddleBrown;
+	color: white;
 	padding: 13px 15px;
 	text-decoration: none;
 	display: inline-block;
@@ -135,4 +155,23 @@ a:hover{
 {
   background: lightblue;
   color: black;
+}
+
+.news-feed-bar
+{
+	width: 100%;
+	height: 70px;
+	background-color: RoyalBlue;
+	text-align: center;
+  padding-left: 20px;
+  position: absolute;
+  z-index: 6;
+  margin-top: 50%;
+}
+
+.feed-bar-house-icon
+{
+	float: left;
+	padding-top: 10px;
+	padding-left: 10px;
 }
