--- a/css/index.css
+++ b/css/index.css
@@ -45,8 +45,9 @@ a:hover{
 	/*border: 3px solid #000000;*/
 	width: 80px;
 	height: 56px;
-	margin-left: 135px;
-	font-size: 50%;
+	margin-top: 40px;
+	margin-left: 0px;
+	font-size: 150%;
 	font-family: Cursive, Times, serif;
 	color: MediumBlue;
 }
@@ -174,4 +175,99 @@ a:hover{
 	float: left;
 	padding-top: 10px;
 	padding-left: 10px;
+}
+
+.animated-text
+{
+	font-size: 20px;
+	width: 60%;
+	text-align: left;
+	/*padding-left: 70px;*/
+	color: RoyalBlue;
+	/*border: 3px solid #000000;*/
+	/*animation-name: text-anime;*/
+  /*animation-duration: 10s;*/
+  /*animation-iteration-count: infinite;*/
+}
+p::before 
+{
+  content: "test0";
+  animation: text-anime infinite 12s;
+  padding-left: 70px;
+}
+
+@keyframes text-anime 
+{
+  from   
+  {
+  	margin-left: 0%;
+  	content: "Want to buy a house?";
+  	color: RoyalBlue;
+  }
+  8%  
+  {
+    margin-left: 5%;
+    color: white;
+    content: "Want to buy a house?";
+  }
+  16%  
+  {
+    margin-left: 50%;
+    content: "Want to buy a house?";
+    color: RoyalBlue;
+  }
+  24%   
+  {
+  	margin-left: 0%;
+  	content: "Want to rent a house?";
+  	color: RoyalBlue;
+  }
+  32%  
+  {
+    margin-left: 5%;
+    color: white;
+    content: "Want to rent a house?";
+  }
+  40%  
+  {
+    margin-left: 50%;
+    color: RoyalBlue;
+    content: "Want to rent a house?";
+  }
+  48%   
+  {
+  	margin-left: 0%;
+  	content: "Want an anex?";
+  	color: RoyalBlue;
+  }
+  56%  
+  {
+    margin-left: 5%;
+    color: white;
+    content: "Want an anex?";
+  }
+  64%  
+  {
+    margin-left: 50%;
+    color: RoyalBlue;
+    content: "Want an anex?";
+  }
+  72%   
+  {
+  	margin-left: 0%;
+  	content: "Call us +9471-255-9318";
+  	color: RoyalBlue;
+  }
+  80%  
+  {
+    margin-left: 5%;
+    color: white;
+    content: "Call us +9471-255-9318";
+  }
+  to  
+  {
+    margin-left: 5%;
+    color: RoyalBlue;
+    content: "Call us +9471-255-9318";
+  }
 }
